// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagSelector disabled render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="PicassoAutocomplete-root PicassoAutocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="PicassoContainer-flex"
      >
        <div
          class="base-Input base- base-Input relative gap-y gap-x items-center rounded-sm [font-size:_unset] hover:[&_.resetButtonDirty]:visible p-2 w-[18.75rem] bg-gray after:content-[""] after:inline-block after:absolute after:top-0 after:bottom-0 after:right-0 after:left-0 after:pointer-events after:border-solid after:rounded-sm after:border-gray after:border [&:has(input:focus)]:after:shadow-[0_0_0_3px] [&:has(input:focus)]:after:shadow-blue text-gray flex flex-wrap h-auto py-1 pl-1 cursor-pointer [&>input]:min-w [&>input]:flex-grow [&>input]:w-0 [&>input]:h-6 [&>input]:pl-1 [&>input]:pr-0 [&>input]:mb-0"
        >
          <div
            aria-disabled="true"
            class="text-lg transition-none border border-solid rounded-[6.25rem] h-6 max-w inline-flex justify-center items-center cursor-default bg-white group align-middle leading-[inherit] text-gray border-gray pointer-events"
            role="button"
            tabindex="0"
          >
            <span
              class="flex gap-2 px-3 overflow-hidden items-center"
            >
              <span
                class="m-0 text-xxs text-inherit font-semibold whitespace-nowrap overflow-ellipsis overflow-hidden leading-[inherit]"
              >
                Afghanistan
              </span>
            </span>
            <span
              aria-label="delete icon"
              class="w-min h-min flex items-center cursor-pointer -ml mr-2"
              role="button"
            >
              <svg
                class="PicassoSvgCloseMinor16-root"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="m8.707 8 3.5 3.5-.707.707-3.5-3.5-3.5 3.5-.707-.707 3.5-3.5-3.5-3.5.707-.707 3.5 3.5 3.5-3.5.707.707-3.5 3.5Z"
                />
              </svg>
            </span>
          </div>
          <input
            aria-autocomplete="list"
            aria-invalid="false"
            autocomplete="off"
            class="base-Input base- [&::-webkit-calendar-picker-indicator]:bg bg-transparent border-none box-border cursor-[inherit] h-full outline-none p-0 peer resize-none w-full text-md leading-4 text-gray [&::-webkit-text-fill-color]:text-gray [&::placeholder]:text-gray [&::placeholder]:opacity-100"
            disabled=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`TagSelector preselected value 1`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="PicassoAutocomplete-root PicassoAutocomplete-rootAuto"
        role="combobox"
      >
        <div
          class="PicassoContainer-flex"
        >
          <div
            class="base-Input base-Input relative gap-y gap-x items-center rounded-sm [font-size:_unset] hover:[&_.resetButtonDirty]:visible p-2 w-[18.75rem] bg-white after:content-[""] after:inline-block after:absolute after:top-0 after:bottom-0 after:right-0 after:left-0 after:pointer-events after:border-solid after:rounded-sm after:border-gray [&:has(input:focus)]:after:border-blue after:border [&:has(input:focus)]:after:shadow-[0_0_0_3px] [&:has(input:focus)]:after:shadow-blue hover:[&:not(:has(input:focus))]:after:border-gray text-black flex flex-wrap h-auto py-1 pl-1 cursor-pointer [&>input]:min-w [&>input]:flex-grow [&>input]:w-0 [&>input]:h-6 [&>input]:pl-1 [&>input]:pr-0 [&>input]:mb-0"
          >
            <div
              class="text-lg transition-none border border-solid rounded-[6.25rem] h-6 max-w inline-flex justify-center items-center cursor-default bg-white group align-middle leading-[inherit] text-graphite border-gray"
              role="button"
              tabindex="0"
            >
              <span
                class="flex gap-2 px-3 overflow-hidden items-center"
              >
                <span
                  class="m-0 text-xxs text-inherit font-semibold whitespace-nowrap overflow-ellipsis overflow-hidden leading-[inherit]"
                >
                  Afghanistan
                </span>
              </span>
              <span
                aria-label="delete icon"
                class="w-min h-min flex items-center cursor-pointer -ml mr-2"
                role="button"
              >
                <svg
                  class="PicassoSvgCloseMinor16-root"
                  style="min-width: 16px; min-height: 16px;"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="m8.707 8 3.5 3.5-.707.707-3.5-3.5-3.5 3.5-.707-.707 3.5-3.5-3.5-3.5.707-.707 3.5 3.5 3.5-3.5.707.707-3.5 3.5Z"
                  />
                </svg>
              </span>
            </div>
            <input
              aria-autocomplete="list"
              aria-invalid="false"
              autocomplete="off"
              class="base-Input [&::-webkit-calendar-picker-indicator]:bg bg-transparent border-none box-border cursor-[inherit] h-full outline-none p-0 peer resize-none w-full text-md leading-4 text-black [&::placeholder]:text-gray [&::placeholder]:opacity-100"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          role="listbox"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`TagSelector renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="PicassoAutocomplete-root PicassoAutocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="PicassoContainer-flex"
      >
        <div
          class="base-Input base-Input relative gap-y gap-x items-center rounded-sm [font-size:_unset] hover:[&_.resetButtonDirty]:visible p-2 w-[18.75rem] bg-white after:content-[""] after:inline-block after:absolute after:top-0 after:bottom-0 after:right-0 after:left-0 after:pointer-events after:border-solid after:rounded-sm after:border-gray [&:has(input:focus)]:after:border-blue after:border [&:has(input:focus)]:after:shadow-[0_0_0_3px] [&:has(input:focus)]:after:shadow-blue hover:[&:not(:has(input:focus))]:after:border-gray text-black flex flex-wrap h-auto py-1 pl-1 cursor-pointer [&>input]:min-w [&>input]:flex-grow [&>input]:w-0 [&>input]:h-6 [&>input]:pl-1 [&>input]:pr-0 [&>input]:mb-0"
        >
          <input
            aria-autocomplete="list"
            aria-invalid="false"
            autocomplete="off"
            class="base-Input [&::-webkit-calendar-picker-indicator]:bg bg-transparent border-none box-border cursor-[inherit] h-full outline-none p-0 peer resize-none w-full text-md leading-4 text-black [&::placeholder]:text-gray [&::placeholder]:opacity-100"
            placeholder="Please select..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        role="listbox"
      />
    </div>
  </div>
</div>
`;
